# qml_nodes

./: CMakeLists.txt  version.h.in
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/client/ui/: DumpWidget.cpp  DumpWidget.h
src/client/ui/qml/: main.qml
src/core/: CMakeLists.txt  Core.cpp  Core.h
src/server/: CMakeLists.txt
